--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ repositories {
 
 dependencies {
 	
+	
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	//////
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
     implementation group: 'org.glassfish.web', name: 'jakarta.servlet.jsp.jstl', version: '3.0.0'
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
