--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ repositories {
 }
 
 dependencies {
+// dependencies
+implementation 'org.springframework.boot:spring-boot-starter-mail'
 	
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
 	implementation group: 'org.glassfish.web', name: 'jakarta.servlet.jsp.jstl', version: '3.0.0'
