--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: justinjung1133@gmail.com
-    password: qjtq dbtj odph kkqp
+    username: alsgur6811@gmail.com
+    password: rbse czix ygfa awvf
     properties:
       mail:
         smtp:
