--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: alsgur6811@gmail.com
-    password: rbse czix ygfa awvf
+    username: joinandmakes@gmail.com
+    password: tpbs dmlk iumy fyjk #!q@w3e4r 메일 비밀번호
     properties:
       mail:
         smtp:
