create-gradle 캐시 lib 추가

--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,13 @@ repositories {
 }
 
 dependencies {
-// dependencies
+	// dependencies
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	
+	
+	// 캐시 라이브러리 
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	
 	
 	
