--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,11 @@ repositories {
 }
 
 dependencies {
+
+// https://mvnrepository.com/artifact/com.google.code.gson/gson
+implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+
+
 // dependencies
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
