--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,12 @@
-{"properties": [{
-  "name": "spring.mail.auth-code-expiration-millis",
-  "type": "java.lang.String",
-  "description": "A description for 'spring.mail.auth-code-expiration-millis'"
-}]}
+{"properties": [
+  {
+    "name": "spring.mail.auth-code-expiration-millis",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.mail.auth-code-expiration-millis'"
+  },
+  {
+    "name": "spring.cloud.gcp.project-id",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.cloud.gcp.project-id'"
+  }
+]}
