--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -8,5 +8,10 @@
     "name": "spring.cloud.gcp.project-id",
     "type": "java.lang.String",
     "description": "A description for 'spring.cloud.gcp.project-id'"
+  },
+  {
+    "name": "spring.cloud.gcp.storage.bucket",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.cloud.gcp.storage.bucket'"
   }
 ]}
