--- a/build.gradle
+++ b/build.gradle
@@ -25,16 +25,11 @@ repositories {
 }
 
 dependencies {
-<<<<<<< HEAD
 
 // https://mvnrepository.com/artifact/com.google.code.gson/gson
-implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+ // implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
 
-// dependencies
-=======
-	// dependencies
->>>>>>> 3bbb13bfb23ebe526fed4a62ba019891a5064a39
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	
