update -결제 히스토리 내역

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,15 +32,15 @@ spring:
       max-request-size: 20MB #멀티파트 전체 요청 크기 20MB제한 
   datasource:
     
-    url: jdbc:mysql://localhost:3306/jam?serverTimezone=Asia/Seoul  #데이터 베이스 연결을 위한 URL을 설정 합니다.
-    driver-class-name: com.mysql.cj.jdbc.Driver #드라이버 클래스를 설정 합니다.
-    username: root #사용자 ID를 지정
-    password: asd123 #DB 비밀번호 여기서는 빈 문자열로 설정
+#    url: jdbc:mysql://localhost:3306/jam?serverTimezone=Asia/Seoul  #데이터 베이스 연결을 위한 URL을 설정 합니다.
+#    driver-class-name: com.mysql.cj.jdbc.Driver #드라이버 클래스를 설정 합니다.
+#    username: root #사용자 ID를 지정
+#    password: asd123 #DB 비밀번호 여기서는 빈 문자열로 설정
   
-#   url: jdbc:h2:mem:adpokerdb;MODE=MySQL  #데이터 베이스 연결을 위한 URL을 설정 합니다.
-#   driver-class-name: org.h2.Driver #드라이버 클래스를 설정 합니다.
-#   username: sa #사용자 ID를 지정
-#   password: '' #DB 비밀번호 여기서는 빈 문자열로 설정
+   url: jdbc:h2:mem:adpokerdb;MODE=MySQL  #데이터 베이스 연결을 위한 URL을 설정 합니다.
+   driver-class-name: org.h2.Driver #드라이버 클래스를 설정 합니다.
+   username: sa #사용자 ID를 지정
+   password: '' #DB 비밀번호 여기서는 빈 문자열로 설정
   sql:
     init:
       schema-locations:
