--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 // https://mvnrepository.com/artifact/com.google.code.gson/gson
  // implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
+	// gson 라이브러리 추가
+	implementation 'com.google.code.gson:gson:2.8.9'  
 
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	
